--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 html {
   font-size: 20px;
 }
@@ -69,6 +66,15 @@ div {
   color: #fff;
   text-align: center;
 }
+#quote-text {
+  background-color: rgba(255, 235, 59, 0.9);
+  padding: 0.2em 0.6em;
+  border-radius: 10px;
+  display: inline-block;
+  color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 
 div span {
   background-color: rgba(255, 235, 59, 0.9); 
@@ -84,4 +90,20 @@ footer {
   padding: 20px;
   color: #ccc;
   margin-top: 150px;
+}
+.Authors-Note {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: auto;
+  max-width: 90%;
+  padding: 10px 20px;
+  background: rgba(18, 18, 18, 0.8);
+  color: #ccc;
+  font-style: italic;
+  font-size: 1rem;
+  border-radius: 8px;
+  text-align: center;
+  white-space: nowrap;
 }
